@startuml
scale 1.5

class FrontControllerServlet {
    void doGet()
    void doPost()
}    
class FilterManager {
    {static} void process()
}
class FilterChainImpl {
    void doFilter()
}
class AuthenticationFilter {
    void doFilter()
}
class VisitorCounterFilter {
    void doFilter()
}
class FrontCommand {
    void process()
}

FrontControllerServlet -- FrontCommand
FrontCommand .right.-- FilterManager
FilterManager -- FilterChainImpl
FilterChainImpl .right.-- AuthenticationFilter
AuthenticationFilter .right.-- VisitorCounterFilter
@enduml
